--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "build": "webpack --watch",
-    "server": "nodemon ./bin/www"
+    "build": "gulp watch"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
@@ -21,6 +20,10 @@
   "devDependencies": {
     "babel-core": "^5.8.12",
     "babel-loader": "^5.3.2",
+    "gulp": "^3.9.0",
+    "gulp-nodemon": "^2.0.3",
+    "gulp-ruby-sass": "^1.0.5",
+    "gulp-util": "^3.0.6",
     "nodemon": "^1.4.0",
     "webpack": "^1.10.5"
   }
