--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp": "^3.9.0",
     "gulp-nodemon": "^2.0.3",
     "gulp-ruby-sass": "^1.0.5",
+    "gulp-sass": "^2.0.4",
     "gulp-util": "^3.0.6",
     "nodemon": "^1.4.0",
     "webpack": "^1.10.5"
