--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "morgan": "~1.6.1",
     "path": "^0.11.14",
     "react": "^0.13.3",
+    "react-router": "^0.13.3",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
