--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
+    "parse": "^1.5.0",
     "path": "^0.11.14",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
